# sjdiff

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: ignore_with_rhai_script.rs  simple_object_diff.json  simple_object_diff.rs
src/: element_path_parser.rs  lib.rs  rhai_script.rs
